--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.0",
     "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/dotenv": "^1.4.1",
     "element-ui": "^2.4.11",
+    "firebase": "^7.15.1",
     "nuxt": "^2.0.0",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0"
