--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "firebase": "^7.15.1",
     "nuxt": "^2.0.0",
     "pug": "^3.0.0",
-    "pug-plain-loader": "^1.0.0"
+    "pug-plain-loader": "^1.0.0",
+    "vuefire": "^2.2.0-alpha.0"
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.0",
