--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^8.0.2",
+    "vue-mq": "^1.0.1",
     "vuefire": "^2.2.0-alpha.0"
   },
   "devDependencies": {
